# Intro-to-Neural-Network-in-Cpp-2024

./: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  diff.py  main.cpp  mlpnetwork
